pkg/front_end/testcases/nnbd/forin.dart.strong.transformed.expect
library;
//
// Problems in library:
//
// pkg/front_end/testcases/nnbd/forin.dart:9:17: Error: The type 'Iterable<int>?' used in the 'for' loop must implement 'Iterable<dynamic>' because 'Iterable<int>?' is nullable and 'Iterable<dynamic>' isn't.
//  - 'Iterable' is from 'dart:core'.
//   for (int x in i2) x;
//                 ^
//
// pkg/front_end/testcases/nnbd/forin.dart:10:18: Error: The type 'Iterable<int>?' used in the 'for' loop must implement 'Iterable<dynamic>' because 'Iterable<int>?' is nullable and 'Iterable<dynamic>' isn't.
//  - 'Iterable' is from 'dart:core'.
//   [for (int x in i2) x];
//                  ^
//
// pkg/front_end/testcases/nnbd/forin.dart:12:17: Error: The type 'List<int>?' used in the 'for' loop must implement 'Iterable<dynamic>' because 'List<int>?' is nullable and 'Iterable<dynamic>' isn't.
//  - 'List' is from 'dart:core'.
//  - 'Iterable' is from 'dart:core'.
//   for (int x in l2) x;
//                 ^
//
// pkg/front_end/testcases/nnbd/forin.dart:13:18: Error: The type 'List<int>?' used in the 'for' loop must implement 'Iterable<dynamic>' because 'List<int>?' is nullable and 'Iterable<dynamic>' isn't.
//  - 'List' is from 'dart:core'.
//  - 'Iterable' is from 'dart:core'.
//   [for (int x in l2) x];
//                  ^
//
// pkg/front_end/testcases/nnbd/forin.dart:15:17: Error: The type 'Object' used in the 'for' loop must implement 'Iterable<dynamic>'.
//  - 'Object' is from 'dart:core'.
//  - 'Iterable' is from 'dart:core'.
//   for (int x in o1) x;
//                 ^
//
// pkg/front_end/testcases/nnbd/forin.dart:16:18: Error: The type 'Object' used in the 'for' loop must implement 'Iterable<dynamic>'.
//  - 'Object' is from 'dart:core'.
//  - 'Iterable' is from 'dart:core'.
//   [for (int x in o1) x];
//                  ^
//
// pkg/front_end/testcases/nnbd/forin.dart:18:17: Error: The type 'Object?' used in the 'for' loop must implement 'Iterable<dynamic>'.
//  - 'Object' is from 'dart:core'.
//  - 'Iterable' is from 'dart:core'.
//   for (int x in o2) x;
//                 ^
//
// pkg/front_end/testcases/nnbd/forin.dart:19:18: Error: The type 'Object?' used in the 'for' loop must implement 'Iterable<dynamic>'.
//  - 'Object' is from 'dart:core'.
//  - 'Iterable' is from 'dart:core'.
//   [for (int x in o2) x];
//                  ^
//
import self as self;
import "dart:core" as core;

static method error(core::Iterable<core::int>? i2, core::List<core::int>? l2, core::Object o1, core::Object? o2) → dynamic {
  {
    synthesized core::Iterator<Never> :sync-for-iterator = invalid-expression "pkg/front_end/testcases/nnbd/forin.dart:9:17: Error: The type 'Iterable<int>?' used in the 'for' loop must implement 'Iterable<dynamic>' because 'Iterable<int>?' is nullable and 'Iterable<dynamic>' isn't.
 - 'Iterable' is from 'dart:core'.
  for (int x in i2) x;
                ^" in let core::Iterable<core::int>? #t1 = i2 in #t1 == null ?{core::Iterable<dynamic>} #t1 as{TypeError} core::Iterable<dynamic> : #t1{core::Iterable<dynamic>}.{core::Iterable::iterator}{core::Iterator<Never>};
    for (; :sync-for-iterator.{core::Iterator::moveNext}(){() → core::bool}; ) {
      core::int x = :sync-for-iterator.{core::Iterator::current}{Never};
      x;
    }
  }
  block {
    final core::List<core::int> #t2 = core::_GrowableList::•<core::int>(0);
    {
      synthesized core::Iterator<Never> :sync-for-iterator = invalid-expression "pkg/front_end/testcases/nnbd/forin.dart:10:18: Error: The type 'Iterable<int>?' used in the 'for' loop must implement 'Iterable<dynamic>' because 'Iterable<int>?' is nullable and 'Iterable<dynamic>' isn't.
 - 'Iterable' is from 'dart:core'.
  [for (int x in i2) x];
                 ^" in let core::Iterable<core::int>? #t3 = i2 in #t3 == null ?{core::Iterable<dynamic>} #t3 as{TypeError} core::Iterable<dynamic> : #t3{core::Iterable<dynamic>}.{core::Iterable::iterator}{core::Iterator<Never>};
      for (; :sync-for-iterator.{core::Iterator::moveNext}(){() → core::bool}; ) {
        core::int x = :sync-for-iterator.{core::Iterator::current}{Never};
        #t2.{core::List::add}{Invariant}(x){(core::int) → void};
      }
    }
  } =>#t2;
  {
    synthesized core::Iterator<Never> :sync-for-iterator = invalid-expression "pkg/front_end/testcases/nnbd/forin.dart:12:17: Error: The type 'List<int>?' used in the 'for' loop must implement 'Iterable<dynamic>' because 'List<int>?' is nullable and 'Iterable<dynamic>' isn't.
 - 'List' is from 'dart:core'.
 - 'Iterable' is from 'dart:core'.
  for (int x in l2) x;
                ^" in let core::List<core::int>? #t4 = l2 in #t4 == null ?{core::Iterable<dynamic>} #t4 as{TypeError} core::Iterable<dynamic> : #t4{core::Iterable<dynamic>}.{core::Iterable::iterator}{core::Iterator<Never>};
    for (; :sync-for-iterator.{core::Iterator::moveNext}(){() → core::bool}; ) {
      core::int x = :sync-for-iterator.{core::Iterator::current}{Never};
      x;
    }
  }
  block {
    final core::List<core::int> #t5 = core::_GrowableList::•<core::int>(0);
    {
      synthesized core::Iterator<Never> :sync-for-iterator = invalid-expression "pkg/front_end/testcases/nnbd/forin.dart:13:18: Error: The type 'List<int>?' used in the 'for' loop must implement 'Iterable<dynamic>' because 'List<int>?' is nullable and 'Iterable<dynamic>' isn't.
 - 'List' is from 'dart:core'.
 - 'Iterable' is from 'dart:core'.
  [for (int x in l2) x];
                 ^" in let core::List<core::int>? #t6 = l2 in #t6 == null ?{core::Iterable<dynamic>} #t6 as{TypeError} core::Iterable<dynamic> : #t6{core::Iterable<dynamic>}.{core::Iterable::iterator}{core::Iterator<Never>};
      for (; :sync-for-iterator.{core::Iterator::moveNext}(){() → core::bool}; ) {
        core::int x = :sync-for-iterator.{core::Iterator::current}{Never};
        #t5.{core::List::add}{Invariant}(x){(core::int) → void};
      }
    }
  } =>#t5;
  {
    synthesized core::Iterator<Never> :sync-for-iterator = invalid-expression "pkg/front_end/testcases/nnbd/forin.dart:15:17: Error: The type 'Object' used in the 'for' loop must implement 'Iterable<dynamic>'.
 - 'Object' is from 'dart:core'.
 - 'Iterable' is from 'dart:core'.
  for (int x in o1) x;
                ^" in o1 as{TypeError} core::Iterable<dynamic>.{core::Iterable::iterator}{core::Iterator<Never>};
    for (; :sync-for-iterator.{core::Iterator::moveNext}(){() → core::bool}; ) {
      final dynamic #t7 = :sync-for-iterator.{core::Iterator::current}{Never};
      {
        core::int x = #t7 as{TypeError,ForDynamic} core::int;
        x;
      }
    }
  }
  block {
    final core::List<core::int> #t8 = core::_GrowableList::•<core::int>(0);
    {
      synthesized core::Iterator<Never> :sync-for-iterator = invalid-expression "pkg/front_end/testcases/nnbd/forin.dart:16:18: Error: The type 'Object' used in the 'for' loop must implement 'Iterable<dynamic>'.
 - 'Object' is from 'dart:core'.
 - 'Iterable' is from 'dart:core'.
  [for (int x in o1) x];
                 ^" in o1 as{TypeError} core::Iterable<dynamic>.{core::Iterable::iterator}{core::Iterator<Never>};
      for (; :sync-for-iterator.{core::Iterator::moveNext}(){() → core::bool}; ) {
        final dynamic #t9 = :sync-for-iterator.{core::Iterator::current}{Never};
        {
          core::int x = #t9 as{TypeError,ForDynamic} core::int;
          #t8.{core::List::add}{Invariant}(x){(core::int) → void};
        }
      }
    }
  } =>#t8;
  {
    synthesized core::Iterator<Never> :sync-for-iterator = invalid-expression "pkg/front_end/testcases/nnbd/forin.dart:18:17: Error: The type 'Object?' used in the 'for' loop must implement 'Iterable<dynamic>'.
 - 'Object' is from 'dart:core'.
 - 'Iterable' is from 'dart:core'.
  for (int x in o2) x;
                ^" in o2 as{TypeError} core::Iterable<dynamic>.{core::Iterable::iterator}{core::Iterator<Never>};
    for (; :sync-for-iterator.{core::Iterator::moveNext}(){() → core::bool}; ) {
      final dynamic #t10 = :sync-for-iterator.{core::Iterator::current}{Never};
      {
        core::int x = #t10 as{TypeError,ForDynamic} core::int;
        x;
      }
    }
  }
  block {
    final core::List<core::int> #t11 = core::_GrowableList::•<core::int>(0);
    {
      synthesized core::Iterator<Never> :sync-for-iterator = invalid-expression "pkg/front_end/testcases/nnbd/forin.dart:19:18: Error: The type 'Object?' used in the 'for' loop must implement 'Iterable<dynamic>'.
 - 'Object' is from 'dart:core'.
 - 'Iterable' is from 'dart:core'.
  [for (int x in o2) x];
                 ^" in o2 as{TypeError} core::Iterable<dynamic>.{core::Iterable::iterator}{core::Iterator<Never>};
      for (; :sync-for-iterator.{core::Iterator::moveNext}(){() → core::bool}; ) {
        final dynamic #t12 = :sync-for-iterator.{core::Iterator::current}{Never};
        {
          core::int x = #t12 as{TypeError,ForDynamic} core::int;
          #t11.{core::List::add}{Invariant}(x){(core::int) → void};
        }
      }
    }
  } =>#t11;
}
static method ok(core::Iterable<core::int> i1, core::List<core::int> l1, dynamic d) → dynamic {
  {
    synthesized core::Iterator<core::int> :sync-for-iterator = i1.{core::Iterable::iterator}{core::Iterator<core::int>};
    for (; :sync-for-iterator.{core::Iterator::moveNext}(){() → core::bool}; ) {
      core::int x = :sync-for-iterator.{core::Iterator::current}{core::int};
      x;
    }
  }
  block {
    final core::List<core::int> #t13 = core::_GrowableList::•<core::int>(0);
    {
      synthesized core::Iterator<core::int> :sync-for-iterator = i1.{core::Iterable::iterator}{core::Iterator<core::int>};
      for (; :sync-for-iterator.{core::Iterator::moveNext}(){() → core::bool}; ) {
        core::int x = :sync-for-iterator.{core::Iterator::current}{core::int};
        #t13.{core::List::add}{Invariant}(x){(core::int) → void};
      }
    }
  } =>#t13;
  {
    synthesized core::Iterator<core::int> :sync-for-iterator = l1.{core::Iterable::iterator}{core::Iterator<core::int>};
    for (; :sync-for-iterator.{core::Iterator::moveNext}(){() → core::bool}; ) {
      core::int x = :sync-for-iterator.{core::Iterator::current}{core::int};
      x;
    }
  }
  block {
    final core::List<core::int> #t14 = core::_GrowableList::•<core::int>(0);
    {
      synthesized core::Iterator<core::int> :sync-for-iterator = l1.{core::Iterable::iterator}{core::Iterator<core::int>};
      for (; :sync-for-iterator.{core::Iterator::moveNext}(){() → core::bool}; ) {
        core::int x = :sync-for-iterator.{core::Iterator::current}{core::int};
        #t14.{core::List::add}{Invariant}(x){(core::int) → void};
      }
    }
  } =>#t14;
  {
    synthesized core::Iterator<dynamic> :sync-for-iterator = (d as{TypeError,ForDynamic} core::Iterable<dynamic>).{core::Iterable::iterator}{core::Iterator<dynamic>};
    for (; :sync-for-iterator.{core::Iterator::moveNext}(){() → core::bool}; ) {
      final dynamic #t15 = :sync-for-iterator.{core::Iterator::current}{dynamic};
      {
        core::int x = #t15 as{TypeError,ForDynamic} core::int;
        x;
      }
    }
  }
  block {
    final core::List<core::int> #t16 = core::_GrowableList::•<core::int>(0);
    {
      synthesized core::Iterator<dynamic> :sync-for-iterator = (d as{TypeError,ForDynamic} core::Iterable<dynamic>).{core::Iterable::iterator}{core::Iterator<dynamic>};
      for (; :sync-for-iterator.{core::Iterator::moveNext}(){() → core::bool}; ) {
        final dynamic #t17 = :sync-for-iterator.{core::Iterator::current}{dynamic};
        {
          core::int x = #t17 as{TypeError,ForDynamic} core::int;
          #t16.{core::List::add}{Invariant}(x){(core::int) → void};
        }
      }
    }
  } =>#t16;
}
static method main() → dynamic {}
